--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,23 +23,23 @@ android {
         leanback {
             dimension "mode"
         }
-        mobile {
-            dimension "mode"
-        }
+        // mobile {
+        //     dimension "mode"
+        // }
         java {
             dimension "api"
         }
-        python {
-            dimension "api"
-        }
+        // python {
+        //     dimension "api"
+        // }
         armeabi_v7a {
             dimension "abi"
             ndk { abiFilters "armeabi-v7a" }
         }
-        arm64_v8a {
-            dimension "abi"
-            ndk { abiFilters "arm64-v8a" }
-        }
+        // arm64_v8a {
+        //     dimension "abi"
+        //     ndk { abiFilters "arm64-v8a" }
+        // }
     }
 
     buildFeatures {
