--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,10 @@ android {
             dimension "abi"
             ndk { abiFilters "armeabi-v7a" }
         }
-        // arm64_v8a {
-        //     dimension "abi"
-        //     ndk { abiFilters "arm64-v8a" }
-        // }
+        arm64_v8a {
+            dimension "abi"
+            ndk { abiFilters "arm64-v8a" }
+        }
     }
 
     buildFeatures {
