移除不必要的编译目标
Signed-off-by: Wade.Cheng <cugwei@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,23 +23,23 @@ android {
         leanback {
             dimension "mode"
         }
-        mobile {
-            dimension "mode"
-        }
+        // mobile {
+        //     dimension "mode"
+        // }
         java {
             dimension "api"
         }
-        python {
-            dimension "api"
-        }
+        // python {
+        //     dimension "api"
+        // }
         armeabi_v7a {
             dimension "abi"
             ndk { abiFilters "armeabi-v7a" }
         }
-        arm64_v8a {
-            dimension "abi"
-            ndk { abiFilters "arm64-v8a" }
-        }
+        // arm64_v8a {
+        //     dimension "abi"
+        //     ndk { abiFilters "arm64-v8a" }
+        // }
     }
 
     buildFeatures {
@@ -128,12 +128,12 @@ dependencies {
     leanbackImplementation(ext: 'aar', name: 'dlna-dmr', group: 'fongmi', version: 'release')
     leanbackImplementation 'androidx.leanback:leanback:1.2.0-alpha04'
     leanbackImplementation 'me.jessyan:autosize:1.2.1'
-    mobileImplementation(ext: 'aar', name: 'dlna-dmc', group: 'fongmi', version: 'release')
+    // mobileImplementation(ext: 'aar', name: 'dlna-dmc', group: 'fongmi', version: 'release')
     //mobileImplementation 'androidx.mediarouter:mediarouter:1.6.0'
-    mobileImplementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    mobileImplementation 'com.google.android.flexbox:flexbox:3.0.0'
+    // mobileImplementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    // mobileImplementation 'com.google.android.flexbox:flexbox:3.0.0'
     //mobileImplementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
-    mobileImplementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
+    // mobileImplementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
     annotationProcessor 'androidx.room:room-compiler:2.5.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 }
