--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,9 @@ android {
         leanback {
             dimension "mode"
         }
-        // mobile {
-        //     dimension "mode"
-        // }
+        mobile {
+            dimension "mode"
+        }
         java {
             dimension "api"
         }
